<resources>
    <string name="app_name">Go500px</string>

    <string name="hint_email">email or username</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating…</string>
    <string name="title_activity_photo_details">PhotoDetailsActivity</string>
    <string name="camera">Camera</string>
    <string name="category">Category</string>
    <string name="hint_comment">Leave a comment</string>
    <string name="comment">Comment</string>
</resources>
