<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="xp.app.go500px.PhotoDetailsActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerInside"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:columnOrderPreserved="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_margin="16dp">

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_comment"
                    android:inputType="textShortMessage"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_comment"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:padding="18dp"
                android:layout_columnSpan="2"
                android:text="@string/comment"/>

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                style="@style/title"/>

            <TextView
                android:id="@+id/photo_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                style="@style/author"/>

            <TextView
                android:id="@+id/photo_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                style="@style/photoDetails"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                style="@style/photoDetailsType"/>
            <TextView
                android:id="@+id/photo_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoDetails"/>

            <TextView
                android:id="@+id/photo_user_comments_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoDetails"/>
            <TextView
                android:id="@+id/photo_comments_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoDetails"/>

            <TextView
                android:id="@+id/photo_user_comments_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoDetails"/>
            <TextView
                android:id="@+id/photo_comments_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoDetails"/>
        </GridLayout>

    </ScrollView>

</LinearLayout>
